--- a/themes/carpal-tunnel/layouts/index.html
+++ b/themes/carpal-tunnel/layouts/index.html
@@ -13,3 +13,15 @@
   {{- partial "testimonials.html" . -}}
 
 {{ end }}
+
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
