Updates to layout

--- a/themes/carpal-tunnel/layouts/partials/home-team.html
+++ b/themes/carpal-tunnel/layouts/partials/home-team.html
@@ -13,7 +13,7 @@
           <figure>
             <img class="img-responsive" src="{{.image}}" alt="{{.title}}">
             <figcaption>
-              <a class="icon-rounded" href="{{.linkedin_link}}"><i class="icon icon-linkedin"></i></a>
+              <a class="icon-rounded" href="{{.linkedin_link}}" target="_blank"><i class="icon icon-linkedin"></i></a>
               <h4>{{.title}}</h4>
               <div class="ht-block__subheading">{{.specialty}}</div>
             </figcaption>
