Added updates to site and config

--- a/themes/carpal-tunnel/assets/scss/_components/_variables/_color-variables.scss
+++ b/themes/carpal-tunnel/assets/scss/_components/_variables/_color-variables.scss
@@ -4,6 +4,6 @@ $very-light-blue: #dcf0fb;
 $home-top-blue: #D5EFFC;
 $black: #000000;
 $very-light-gray: #f4f4f4;
-$red: #ff3d00;
+$red: #c83535;
 $white: #ffffff;
 $gray: #6c7274;
