--- a/themes/carpal-tunnel/assets/scss/_components/_elements/_inputs.scss
+++ b/themes/carpal-tunnel/assets/scss/_components/_elements/_inputs.scss
@@ -1,5 +1,5 @@
 .form-group {
-  margin-bottom: 20px;
+  margin-bottom: 26px;
 }
 .form-control {
   height: 50px;
@@ -11,6 +11,7 @@
   color: $black;
   @include fsz(16px);
   font-family: $font-regular;
+  transition: 300ms;
   @at-root textarea#{&}{
     height: 110px;
     padding: 16px 30px;
@@ -19,5 +20,35 @@
   @include placeholder{
     opacity: 1;
     color: $black;
+  }
+  &:focus{
+    border: 1px solid $blue;
+  }
+  &.error{
+    border: 1px solid rgba($red, 0.5);
+  }
+}
+
+[data-type='validator-error'] {
+  font-size: 11px;
+  position: absolute;
+  z-index: 10;
+  margin-top: 2px;
+  color: #ffffff;
+  background: $red;
+  box-shadow: 0 6px 2px -2px rgba($red, 0.3);
+  padding: 4px 10px;
+  border-radius: 1px;
+  pointer-events: none;
+  &:before {
+    content: '';
+    width: 0;
+    height: 0;
+    top: -5px;
+    position: absolute;
+    left: 6px;
+    border-left: 5px solid rgba(0, 0, 0, 0);
+    border-right: 5px solid rgba(0, 0, 0, 0);
+    border-bottom: 5px solid $red;
   }
 }
