--- a/themes/carpal-tunnel/assets/scss/_partials/_home-team.scss
+++ b/themes/carpal-tunnel/assets/scss/_partials/_home-team.scss
@@ -20,6 +20,20 @@
 }
 .ht-block {
   margin-bottom: 80px;
+  position: relative;
+  &:hover{
+    .ht-block__img{
+      img{
+        transform: scale(1.05);
+      }
+    }
+  }
+  &__img{
+    overflow: hidden;
+    img{
+      transition: 700ms;
+    }
+  }
   figcaption{
     position: relative;
     padding: 50px 30px 0 30px;
@@ -28,10 +42,18 @@
     position: absolute;
     top: -18px;
     left: 30px;
+    z-index: 3;
   }
   &__subheading {
     margin-top: 8px;
     color: $blue;
     line-height: 1.2;
+  }
+  &__link{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
   }
 }
