--- a/themes/carpal-tunnel/assets/scss/_partials/_team.scss
+++ b/themes/carpal-tunnel/assets/scss/_partials/_team.scss
@@ -1,14 +1,11 @@
 .team {
-  padding: 150px 0 50px;
+  padding: 100px 0;
   @include respond-to(sm){
-    padding: 100px 0 10px;
+    padding: 50px 0;
   }
 }
 .team-item {
-  margin-bottom: 100px;
-  @include respond-to(sm){
-    margin-bottom: 70px;
-  }
+  padding: 50px 0;
   &__img {
     img{
       border-radius: 0 60px 0 60px;
