--- a/themes/carpal-tunnel/layouts/partials/contact.html
+++ b/themes/carpal-tunnel/layouts/partials/contact.html
@@ -4,31 +4,31 @@
       <div class="col-12 col-sm-7 col-lg-8">
         <div class="form">
           <h2>{{.Site.Params.contact.contact_heading}}</h2>
-          <form>
+          <form name="contact-form">
             <div class="row gutter-20">
               <div class="col-12 col-md-6">
                 <div class="form-group">
-                  <input class="form-control" type="text" placeholder="Full name">
+                  <input class="form-control" type="text" name="name" placeholder="Full name" data-rule="required|name">
                 </div>
               </div>
               <div class="col-12 col-md-6">
                 <div class="form-group">
-                  <input class="form-control" type="email" placeholder="Email address">
+                  <input class="form-control" type="email" name="email" placeholder="Email address" data-rule="required|email">
                 </div>
               </div>
               <div class="col-12 col-md-6">
                 <div class="form-group">
-                  <input class="form-control" type="text" placeholder="Phone number">
+                  <input class="form-control" type="text" name="phone" placeholder="Phone number" data-rule="required|phone_number-14">
                 </div>
               </div>
               <div class="col-12 col-md-6">
                 <div class="form-group">
-                  <input class="form-control" type="text" placeholder="Appointment date">
+                  <input class="form-control" type="text" name="date" placeholder="Appointment date" data-rule="required|date-10">
                 </div>
               </div>
             </div>
             <div class="form-group">
-              <textarea class="form-control" placeholder="Text message"></textarea>
+              <textarea class="form-control" name="message" placeholder="Text message" data-rule="required"></textarea>
             </div>
             <button class="btn btn--default" type="submit">Send message</button>
           </form>
