--- a/themes/carpal-tunnel/layouts/partials/header.html
+++ b/themes/carpal-tunnel/layouts/partials/header.html
@@ -21,9 +21,9 @@
         </li>
     </ul>
   </nav>
-  <a href="tel:{{ replaceRE "[-]" "" .Site.Params.contact.cleveland_phone}}" class="site-header__call">
+  <a href="tel:{{ replaceRE "[-]" "" .Site.Data.contact.cleveland.cleveland_phone}}" class="site-header__call">
     <div class="site-header__call-icon"><i class="icon icon-mobile"></i></div>
-    <div class="d-none d-block-lg">Call to our clinic: <span>{{.Site.Params.contact.cleveland_phone}}</span></div>
+    <div class="d-none d-block-lg">Call to our clinic: <span>{{.Site.Data.contact.cleveland.cleveland_phone}}</span></div>
   </a>
   <a class="btn btn--light" href="#contact">Contact Us</a>
 </header>
