--- a/themes/carpal-tunnel/layouts/partials/top-section.html
+++ b/themes/carpal-tunnel/layouts/partials/top-section.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="top-section__appointment-text">
-            {{.Site.Params.topSection.appointment_text}}
+            {{.Site.Params.appointment_text}}
             <i class="icon icon-arrow"></i>
           </div>
         </div>
