Changed media folder

--- a/themes/carpal-tunnel/layouts/partials/testimonials.html
+++ b/themes/carpal-tunnel/layouts/partials/testimonials.html
@@ -11,7 +11,7 @@
           <figure>
             <blockquote>{{.text}}</blockquote>
             <figcaption>
-              <img class="testimonials-slider__item-rate" src="assets/images/elements/stars.svg" alt="">
+              <img class="testimonials-slider__item-rate" src="assets/images//stars.svg" alt="">
               <h4>{{.name}}</h4>
               <div class="testimonials-slider__subheading">{{.company}}</div>
             </figcaption>
