--- a/themes/carpal-tunnel/layouts/about/list.html
+++ b/themes/carpal-tunnel/layouts/about/list.html
@@ -4,12 +4,12 @@
       <div class="team-item">
         <div class="row">
           <div class="col-12 col-sm-6 col-lg-4">
-            <div class="team-item__img"><img class="img-responsive" src="{{.Site.Data.about.photo | relURL}}" alt="{{.Site.Data.about.title | markdownify | plainify}}"></div>
+            <div class="team-item__img"><img class="img-responsive" src="{{.Site.Data.about.about_text.photo | relURL}}" alt="{{.Site.Data.about.about_text.title | markdownify | plainify}}"></div>
           </div>
           <div class="col-12 col-lg-8">
             <div class="team-text odd">
-              <h2>{{.Site.Data.about.title | markdownify}}</h2>
-              <div class="team-text__body">{{.Site.Data.about.text | markdownify}}</div>
+              <h2>{{.Site.Data.about.about_text.title | markdownify}}</h2>
+              <div class="team-text__body">{{.Site.Data.about.about_text.text | markdownify}}</div>
             </div>
           </div>
         </div>
@@ -19,8 +19,8 @@
   <div class="clinic">
     <div class="container">
       <div class="clinic__inner">
-        <h2>{{.Site.Data.about.clinic_title}}</h2>
-        <img class="img-responsive" src="{{.Site.Data.about.clinic_image | relURL}}" alt="{{.Site.Data.about.clinic_title}}">
+        <h2>{{.Site.Data.about.clinic.clinic_title}}</h2>
+        <img class="img-responsive" src="{{.Site.Data.about.clinic.clinic_image | relURL}}" alt="{{.Site.Data.about.clinic.clinic_title}}">
       </div>
     </div>
   </div>
