--- a/themes/carpal-tunnel/layouts/partials/contact.html
+++ b/themes/carpal-tunnel/layouts/partials/contact.html
@@ -4,7 +4,8 @@
       <div class="col-12 col-sm-7 col-lg-8">
         <div class="form">
           <h2>{{.Site.Data.contact.contact_heading}}</h2>
-          <form name="contact-form" data-netlify="true">
+          <form name="contact-form" data-netlify="true" netlify-honeypot="not-for-humans">
+            <input class="d-none" name="not-for-humans" />
             <div class="row gutter-20">
               <div class="col-12 col-md-6">
                 <div class="form-group">
