Added changes to all templates to add id

--- a/themes/carpal-tunnel/layouts/about/list.html
+++ b/themes/carpal-tunnel/layouts/about/list.html
@@ -16,7 +16,7 @@
       </div>
     </div>
   </section>
-  <div class="clinic">
+  <div class="clinic" id="{{.Site.Data.about.clinic.id}}">
     <div class="container">
       <div class="clinic__inner">
         <h2>{{.Site.Data.about.clinic.clinic_title}}</h2>
