--- a/themes/carpal-tunnel/layouts/partials/home-team.html
+++ b/themes/carpal-tunnel/layouts/partials/home-team.html
@@ -1,4 +1,4 @@
-<section class="home-team">
+<section class="home-team" id="{{.Site.Data.team.home_id}}">
   <div class="container container--sm">
     <div class="home-team__header">
       <h2>{{.Site.Data.team.home_title}}</h2>
