--- a/themes/carpal-tunnel/layouts/partials/testimonials.html
+++ b/themes/carpal-tunnel/layouts/partials/testimonials.html
@@ -1,4 +1,4 @@
-<section class="testimonials">
+<section class="testimonials" id="{{.Site.Data.testimonials.id}}">
   <div class="container container--sm">
     <h2 class="text-center">What our patients say</h2>
     <div class="testimonials-slider">
