--- a/themes/carpal-tunnel/layouts/our-team/list.html
+++ b/themes/carpal-tunnel/layouts/our-team/list.html
@@ -26,7 +26,7 @@
       {{end}}
     </div>
   </section>
-  <section class="staff">
+  <section class="staff" id="{{.Site.Data.team.staff_id}}">
     <div class="container">
       <h2 class="text-center">{{.Site.Data.team.staff_title}}</h2>
       <div class="row gutter-20">
