Added gradient background and fix for favicons

--- a/themes/carpal-tunnel/layouts/partials/footer.html
+++ b/themes/carpal-tunnel/layouts/partials/footer.html
@@ -28,6 +28,8 @@
   ga('send', 'pageview');
 </script>
 
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 <script>
   if (window.netlifyIdentity) {
     window.netlifyIdentity.on("init", user => {
