--- a/themes/carpal-tunnel/assets/scss/_partials/_top-section.scss
+++ b/themes/carpal-tunnel/assets/scss/_partials/_top-section.scss
@@ -4,6 +4,18 @@
   background-repeat: no-repeat;
   background-color: $white;
   padding: 200px 0 136px;
+  .container{
+    z-index: 2;
+  }
+  &:after{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(to right, $very-light-blue, rgba($very-light-blue, 0));
+  }
   &:before{
     content: '';
     position: absolute;
