--- a/themes/carpal-tunnel/layouts/partials/head.html
+++ b/themes/carpal-tunnel/layouts/partials/head.html
@@ -10,14 +10,14 @@
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
 
-<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-<link rel="manifest" href="assets/favicon/site.webmanifest">
-<link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="assets/favicon/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ "assets/favicon/apple-touch-icon.png" | relURL }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ "assets/favicon/favicon-32x32.png" | relURL }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ "assets/favicon/favicon-16x16.png" | relURL }}">
+<link rel="manifest" href="{{ "assets/favicon/site.webmanifest" | relURL }}">
+<link rel="mask-icon" href="{{ "assets/favicon/safari-pinned-tab.svg" | relURL }}" color="#5bbad5">
+<link rel="shortcut icon" href="{{ "assets/favicon/favicon.ico" | relURL }}">
 <meta name="msapplication-TileColor" content="#16bafb">
-<meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
+<meta name="msapplication-config" content="{{ "assets/favicon/browserconfig.xml" | relURL }}">
 <meta name="theme-color" content="#ffffff">
 
 {{ $cssOpts := (dict "targetPath" "assets/css/main.css" ) }}
