--- a/themes/carpal-tunnel/assets/scss/_partials/_team.scss
+++ b/themes/carpal-tunnel/assets/scss/_partials/_team.scss
@@ -83,7 +83,7 @@
     }
   }
   &__body {
-    padding: 44px 50px;
+    padding: 44px 50px 44px 115px;
     display: flex;
     position: relative;
     @include respond-to(lg){
@@ -91,7 +91,6 @@
     }
   }
   &__text {
-    margin-left: 30px;
     @include respond-to(lg){
       margin-left: 0;
     }
@@ -101,8 +100,9 @@
   }
   .icon-rounded{
     flex-shrink: 0;
+    position: absolute;
+    left: 50px;
     @include respond-to(lg){
-      position: absolute;
       top: 0;
       transform: translateY(-50%);
       left: 30px;
