--- a/themes/carpal-tunnel/layouts/404.html
+++ b/themes/carpal-tunnel/layouts/404.html
@@ -7,7 +7,7 @@
         <div class="container container--sm">
           <a class="not-found__logo" href="{{ .Site.BaseURL }}"><img src="{{ .Site.Params.logo | relURL }}" alt="{{.Site.Title}}"></a>
           <h1>Page not found</h1>
-          <div class="not-found__error">ERROR 404</div>
+          <div class="not-found__error">404</div>
         </div>
         <div class="top-section__appointment">
           <a href="{{ .Site.BaseURL }}" class="top-section__appointment-link"></a>
