--- a/themes/carpal-tunnel/layouts/partials/contact.html
+++ b/themes/carpal-tunnel/layouts/partials/contact.html
@@ -4,8 +4,8 @@
       <div class="col-12 col-sm-7 col-lg-8">
         <div class="form">
           <h2>{{.Site.Data.contact.contact_heading}}</h2>
-          <form name="contact-form" data-netlify="true" netlify-honeypot="not-for-humans">
-            <input class="d-none" name="not-for-humans" />
+          <form name="contact-form" method="POST" action="https://us-central1-carpal-tunnel-center-form.cloudfunctions.net/form_sending">
+            <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response" />
             <div class="row gutter-20">
               <div class="col-12 col-md-6">
                 <div class="form-group">
@@ -74,3 +74,80 @@
     </div>
   </div>
 </section>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script>
+
+$('form[name=contact-form]').on('submit', function () {
+
+var _form = $(this);
+var data = _form.serialize();
+var btn = _form.find('button[type=submit]');
+btn.text('Sending...');
+$.ajax({
+url: _form.attr('action'),
+type: _form.attr('method'),
+dataType: 'json',
+data: data,
+success: function (response) {
+    btn.text('SUBMIT');
+    if (response.success) {
+
+        _form.trigger("reset");
+        alert(response.message);
+
+        return false;
+    } else {
+        if (response.message) {
+            alert(response.message);
+        } else {
+            alert('Something wrong. Please try again.');
+        }
+    }
+    return false;
+},
+error: function (err) {
+    btn.text('SUBMIT');
+    console.log(err);
+    return false;
+}
+});
+return false;
+});
+
+</script>
+<!--<script>
+  console.log(document.querySelector('form[name="contact-form"'));
+   document.querySelector('form[name="contact-form"').onsubmit = function(event) {
+     event.preventDefault();
+     var form = this;
+     var btn = form.querySelector('button[type=submit]');
+     btn.innerHTML = 'Sending...';
+     var data = new FormData(form);
+     var request = new XMLHttpRequest();
+     request.onload = function() {
+       btn.innerHTML = 'SUBMIT';
+       var response = {};
+       try {
+         response = JSON.parse(this.responseText);
+       } catch(err) {}
+       if (this.status === 200 && response.success) {
+         form.reset();
+         if (response.message) {
+           alert(response.message);
+         }
+         return true;
+       }
+       if (response.message) {
+         alert(response.message);
+       } else {
+         alert('Something wrong. Please try again.');
+       }
+     }
+     request.onerror = function(err) {
+       btn.innerHTML = 'SUBMIT';
+     }
+     request.open(this.method, this.action);
+     request.send(data);
+
+   }
+ </script>-->
