--- a/themes/carpal-tunnel/layouts/partials/contact.html
+++ b/themes/carpal-tunnel/layouts/partials/contact.html
@@ -73,7 +73,7 @@
     </div>
   </div>
 </section>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script>
 
 $('form[name=contact-form]').on('submit', function () {
@@ -117,39 +117,43 @@ grecaptcha.ready(function() {
 return false;
 });
 
-</script>
-<!--<script>
+</script>-->
+<script>
    document.querySelector('form[name="contact-form"').onsubmit = function(event) {
      event.preventDefault();
      var form = this;
      var btn = form.querySelector('button[type=submit]');
      btn.innerHTML = 'Sending...';
-     var data = new FormData(form);
-     var request = new XMLHttpRequest();
-     request.onload = function() {
-       btn.innerHTML = 'SUBMIT';
-       var response = {};
-       try {
-         response = JSON.parse(this.responseText);
-       } catch(err) {}
-       if (this.status === 200 && response.success) {
-         form.reset();
-         if (response.message) {
-           alert(response.message);
+     grecaptcha.ready(function() {
+       grecaptcha.execute('6LdVncAUAAAAAPHpUu5pG4USDM31dffdj6c8oGUA', {action: 'homepage'}).then(function(token) {
+         var data = new FormData(form);
+         data.append('g-recaptcha-response', token);
+         var request = new XMLHttpRequest();
+         request.onload = function() {
+           btn.innerHTML = 'SUBMIT';
+           var response = {};
+           try {
+             response = JSON.parse(this.responseText);
+           } catch(err) {}
+           if (this.status === 200 && response.success) {
+             form.reset();
+             if (response.message) {
+               alert(response.message);
+             }
+             return true;
+           }
+           if (response.message) {
+             alert(response.message);
+           } else {
+             alert('Something wrong. Please try again.');
+           }
          }
-         return true;
-       }
-       if (response.message) {
-         alert(response.message);
-       } else {
-         alert('Something wrong. Please try again.');
-       }
-     }
-     request.onerror = function(err) {
-       btn.innerHTML = 'SUBMIT';
-     }
-     request.open(this.method, this.action);
-     request.send(data);
-
+         request.onerror = function(err) {
+           btn.innerHTML = 'SUBMIT';
+         }
+         request.open(this.method, this.action);
+         request.send(data);
+     });
+   });
    }
- </script>-->
+ </script>
