--- a/themes/carpal-tunnel/layouts/partials/contact.html
+++ b/themes/carpal-tunnel/layouts/partials/contact.html
@@ -157,8 +157,11 @@ return false;
          }
          request.open(form.method, form.action);
          request.setRequestHeader('Content-type', 'application/json; charset=utf-8');
-         console.log('bye');
-         request.send(data);
+          var requestData = {};
+          data.forEach(function(value, key) {
+            requestData[key] = value;
+          });
+          request.send(JSON.stringify(requestData));
      });
    });
    }
