--- a/themes/carpal-tunnel/assets/scss/_partials/_contact.scss
+++ b/themes/carpal-tunnel/assets/scss/_partials/_contact.scss
@@ -84,7 +84,7 @@
   position: relative;
   border-radius: 10px 0 10px 0;
   margin-bottom: 28px;
-  display: none;ß
+  display: none;
   i{
     left: 28px;
     @include fsz(17px);
