Update to form style

--- a/themes/carpal-tunnel/assets/scss/_partials/_contact.scss
+++ b/themes/carpal-tunnel/assets/scss/_partials/_contact.scss
@@ -85,6 +85,9 @@
   border-radius: 10px 0 10px 0;
   margin-bottom: 28px;
   display: none;
+  &:first-letter{
+    text-transform: uppercase;
+  }
   i{
     left: 28px;
     @include fsz(17px);
