--- a/themes/carpal-tunnel/layouts/partials/contact.html
+++ b/themes/carpal-tunnel/layouts/partials/contact.html
@@ -5,9 +5,7 @@
         <div class="form">
           <h2>{{.Site.Data.contact.contact_heading}}</h2>
           <form name="contact-form" method="POST" action="https://us-central1-carpal-tunnel-center-form.cloudfunctions.net/form_sending">
-            <div class="contact__result error">
-              <i class="icon icon-email"></i>Your message was sent successfully! We will be in touch with you soon.
-            </div>
+            <div class="contact__result"></div>
             <div class="row gutter-20">
               <div class="col-12 col-md-6">
                 <div class="form-group">
