--- a/themes/carpal-tunnel/assets/scss/_partials/_contact.scss
+++ b/themes/carpal-tunnel/assets/scss/_partials/_contact.scss
@@ -85,7 +85,7 @@
   border-radius: 10px 0 10px 0;
   margin-bottom: 28px;
   display: none;
-  span:first-letter{
+  span::first-letter{
     text-transform: uppercase;
   }
   i{
