--- a/themes/carpal-tunnel/assets/scss/_components/_fonts.scss
+++ b/themes/carpal-tunnel/assets/scss/_components/_fonts.scss
@@ -137,3 +137,11 @@ Generated using nucleoapp.com
 .icon-email::before {
   content: "\ea0c";
 }
+
+.icon-circle::before {
+  content: "\ea0d";
+}
+
+.icon-check::before {
+  content: "\ea0e";
+}
