--- a/themes/carpal-tunnel/layouts/partials/contact.html
+++ b/themes/carpal-tunnel/layouts/partials/contact.html
@@ -9,7 +9,7 @@
             <div class="row gutter-20">
               <div class="col-12 col-md-6">
                 <div class="form-group">
-                  <input class="form-control" type="text" name="name" placeholder="Full name">
+                  <input class="form-control" type="text" name="name" placeholder="Full name" data-rule="required|name">
                 </div>
               </div>
               <div class="col-12 col-md-6">
